@@ -3,15 +3,16 @@ import org.apache.tools.ant.filters.*
 
 plugins {
   // Manage optional dependencies in maven pom.
-  id 'nebula.optional-base' version '7.0.0'
-  id 'com.github.spotbugs' version '5.0.14'
-  id 'org.owasp.dependencycheck' version '8.2.1'
-  id "io.freefair.lombok" version "6.5.1"
+  id "nebula.optional-base" version "7.0.0"
+  id "com.github.spotbugs" version "5.2.1"
+  id "org.sonarqube" version "4.4.1.3373"
+  id "org.owasp.dependencycheck" version "8.4.2"
+  id "io.freefair.lombok" version "8.4"
 }
 
 ext {
-  interlokCoreVersion = project.findProperty('interlokCoreVersion') ?: '4.8-SNAPSHOT'
-  releaseVersion = project.findProperty('releaseVersion') ?: '4.8-SNAPSHOT'
+  interlokCoreVersion = project.findProperty('interlokCoreVersion') ?: '5.0-SNAPSHOT'
+  releaseVersion = project.findProperty('releaseVersion') ?: '5.0-SNAPSHOT'
   nexusBaseUrl = project.findProperty('nexusBaseUrl') ?: 'https://nexus.adaptris.net/nexus'
   mavenPublishUrl = project.findProperty('mavenPublishUrl') ?: nexusBaseUrl + '/content/repositories/snapshots'
   javadocsBaseUrl = nexusBaseUrl + "/content/sites/javadocs/com/adaptris"
@@ -25,8 +26,8 @@ ext {
   organizationName = "Adaptris Ltd"
   organizationUrl = "http://interlok.adaptris.net"
 
-  slf4jVersion = '2.0.3'
-  mockitoVersion = '4.9.0'
+  slf4jVersion = '2.0.9'
+  mockitoVersion = '5.2.0'
 }
 
 ext.hostname = { ->
@@ -44,15 +45,18 @@ ext.propertyTemplate = { dir, filename ->
   return filename
 }
 
+// If graphviz is installed via scoop, plantuml doesn't find it because it's not
+// in its expected "location(s)" it searches for c:\*\graphviz**\dot.exe
+// so windows we'd expect to have the GRAPHVIZ_DOT env defined 
+// On Linux we should be able to find it via the path.
 ext.hasGraphViz = { ->
-//  def app = "dot"
-//  if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-//    app = app + ".exe"
-//  }
-//  return System.getenv("PATH").split(File.pathSeparator).any{
-//    java.nio.file.Paths.get("${it}").resolve(app).toFile().exists()
-//  }
-  return false
+  def app = "dot"
+  if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+    app = app + ".exe"
+  }
+  return System.getenv("GRAPHVIZ_DOT") !=null ||  System.getenv("PATH").split(File.pathSeparator).any{
+    java.nio.file.Paths.get("${it}").resolve(app).toFile().exists()
+  }
 }
 
 ext.gitBranchNameOrTimestamp = { branchName ->
@@ -86,6 +90,14 @@ task clean(type: Delete) {
   delete project.buildDir
 }
 
+sonar {
+  properties {
+    property "sonar.projectKey", "adaptris_interlok-json"
+    property "sonar.organization", "adaptris-org"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
 allprojects {
   tasks.withType(Jar) {
     metaInf {
@@ -102,15 +114,16 @@ allprojects {
 
 subprojects {
   // Apply the java plugin to add support for Java
-  apply plugin: 'java-library'
-  apply plugin: 'maven-publish'
+  apply plugin: "java-library"
+  apply plugin: "maven-publish"
   apply plugin: "jacoco"
   apply plugin: "io.freefair.lombok"
-  apply plugin: 'com.github.spotbugs'
-  apply plugin: 'org.owasp.dependencycheck'
+  apply plugin: "com.github.spotbugs"
+  apply plugin: "org.sonarqube"
+  apply plugin: "org.owasp.dependencycheck"
 
-  sourceCompatibility = JavaVersion.VERSION_11
-  targetCompatibility = JavaVersion.VERSION_11
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
   group   = 'com.adaptris'
   version = releaseVersion
   def versionDir = "$buildDir/version"
@@ -158,7 +171,6 @@ subprojects {
 
     // INTERLOK-3740 switch from jcraft to com.github.mwiede jsch fork.
     all*.exclude group: 'com.jcraft', module: 'jsch'
-
   }
 
   configurations.all {
@@ -175,15 +187,15 @@ subprojects {
     offlineJavadocPackages ("com.adaptris:interlok-core:$interlokCoreVersion:javadoc@jar") { changing= true}
     offlineJavadocPackages ("com.adaptris:interlok-common:$interlokCoreVersion:javadoc@jar") { changing= true}
 
-    testImplementation ('junit:junit:4.13.2')
+    testImplementation ("org.junit.jupiter:junit-jupiter-api:5.10.0")
+    testImplementation ("org.junit.jupiter:junit-jupiter-engine:5.10.0")
     testImplementation ("org.slf4j:slf4j-simple:$slf4jVersion")
     testImplementation ("com.adaptris:interlok-stubs:$interlokCoreVersion") { changing= true }
     testImplementation ("org.mockito:mockito-core:$mockitoVersion")
     testImplementation ("org.mockito:mockito-inline:$mockitoVersion")
 
     javadoc("com.adaptris:interlok-core-apt:$interlokCoreVersion") { changing= true}
-    umlDoclet("nl.talsmasoftware:umldoclet:1.1.4")
-
+    umlDoclet("nl.talsmasoftware:umldoclet:2.1.0")
   }
 
   sourceSets {
@@ -233,8 +245,8 @@ subprojects {
       options.tags('apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:','implNote:a:Implementation Note:')
       taglets = ["com.adaptris.taglet.ConfigTaglet", "com.adaptris.taglet.LicenseTaglet"]
       options.addStringOption "tagletpath", configurations.javadoc.asPath
-      options.addStringOption('Xdoclint:none', '-quiet')
-      options.addBooleanOption "-no-module-directories", true
+      options.addStringOption "Xdoclint:none", "-quiet"
+
       options.group ("Transformation/Validation", ["com.adaptris.core.transform.json.*" , "com.adaptris.core.transform.json", "com.adaptris.core.json.schema", "com.adaptris.core.json.schema.*"]).
         group ("JSON Path", ["com.adaptris.core.services.path.json", "com.adaptris.core.services.path.json.*", "com.adaptris.core.services.routing.json.*" , "com.adaptris.core.services.routing.json"])
         group ("Split and Aggregate", ["com.adaptris.core.services.splitter.json", "com.adaptris.core.services.splitter.json.*", "com.adaptris.core.json.aggregator.*" , "com.adaptris.core.json.aggregator"])
@@ -256,25 +268,16 @@ subprojects {
       options.tags('apiNote:a:API Note:', 'implSpec:a:Implementation Requirements:','implNote:a:Implementation Note:')
       taglets = ["com.adaptris.taglet.ConfigTaglet", "com.adaptris.taglet.LicenseTaglet"]
       options.addStringOption "tagletpath", configurations.javadoc.asPath
-      options.addStringOption('Xdoclint:none', '-quiet')
-      options.addBooleanOption "-no-module-directories", true
+      options.addStringOption "Xdoclint:none", "-quiet"
+
       options.docletpath = configurations.umlDoclet.files.asType(List)
       options.doclet = "nl.talsmasoftware.umldoclet.UMLDoclet"
-      options.addStringOption "umlBasePath", destinationDir.getCanonicalPath()
+      // Create class & package use pages
+      options.addStringOption "use"    
       options.addStringOption "umlImageFormat", "SVG"
-      options.addStringOption "umlExcludedReferences", "java.lang.Exception,java.lang.Object,java.lang.Enum"
-      options.addStringOption "umlIncludePrivateClasses","false"
-      options.addStringOption "umlIncludePackagePrivateClasses","false"
-      options.addStringOption "umlIncludeProtectedClasses","false"
-      options.addStringOption "umlIncludeAbstractSuperclassMethods","false"
-      options.addStringOption "umlIncludeConstructors","false"
-      options.addStringOption "umlIncludePublicFields","false"
-      options.addStringOption "umlIncludePackagePrivateFields","false"
-      options.addStringOption "umlIncludeProtectedFields", "false"
-      options.addStringOption "umlIncludeDeprecatedClasses", "false"
-      options.addStringOption "umlIncludePrivateInnerClasses", "false"
-      options.addStringOption "umlIncludePackagePrivateInnerClasses", "false"
-      options.addStringOption "umlIncludeProtectedInnerClasses","false"
+      options.addStringOption "umlExcludedTypeReferences", "java.lang.Exception,java.lang.Object,java.lang.Enum,java.lang.annotation.Annotation"
+      options.addStringOption "umlJavaBeanPropertiesAsFields"
+      options.addBooleanOption "failOnCyclicPackageDependencies", false
       options.group ("Transformation/Validation", ["com.adaptris.core.transform.json.*" , "com.adaptris.core.transform.json", "com.adaptris.core.json.schema", "com.adaptris.core.json.schema.*"]).
         group ("JSON Path", ["com.adaptris.core.services.path.json", "com.adaptris.core.services.path.json.*", "com.adaptris.core.services.routing.json.*" , "com.adaptris.core.services.routing.json"])
         group ("Split and Aggregate", ["com.adaptris.core.services.splitter.json", "com.adaptris.core.services.splitter.json.*", "com.adaptris.core.json.aggregator.*" , "com.adaptris.core.json.aggregator"])
@@ -308,14 +311,18 @@ subprojects {
       }
     }
   }
-
-  jacocoTestReport {
-      reports {
-          xml.required= true
-          html.required= true
-      }
+  
+  test {
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED']
+    useJUnitPlatform()
   }
 
+  jacocoTestReport {
+    reports {
+      xml.required= true
+      html.required= true
+    }
+  }
 
   // disable spotbugsTests which checks our test code..
   spotbugsTest.enabled = false
@@ -347,7 +354,6 @@ subprojects {
       knownExploitedURL=project.findProperty('dependencyCheckKnownExploitedURL')
     }
   }
-
 
   task lgtmCompile(type: JavaCompile, dependsOn: delombok) {
     group 'Build'
